@@ -9,6 +9,7 @@
 	- Show comparable CERO ratings on /r+/edit input field
 	- Allow search queries with only one character
 	- Removed category filter from /v/all
+	- Added expand/collapse feature to the history browser
 
 2.3 - 2009-04-01
 	- No page reload needed when changing rlist status from vn page
